@@ -31,5 +31,6 @@ extern const int16_t ff_eac3_gaq_remap_2_4_b[9][2];
 
 extern const int16_t (* const ff_eac3_mantissa_vq[8])[6];
 extern const uint8_t ff_eac3_frm_expstr[32][6];
+extern const float   ff_eac3_spx_atten_tab[32][3];
 
 #endif /* AVCODEC_EAC3DEC_DATA_H */
